# vision_toolkit

./: .gitignore  CMakeLists.txt  README.md  autostitcher.py  build_sequence.sh  donwload_dir_script.sh  download_bag.py  download_bag.sh  download_dir.py  error_log.txt  extract_all.sh  extract_bag_dump.sh  requirements.txt  run_bag_dump.sh  run_build_sectors.sh  run_build_sequence_graph.sh  run_sequence_graph.sh  typescript
extract/: bag_.sh  cal.py  error_log.txt  ex_all_bag.sh  parallel_ex.sh  read_bag_.py  read_bag_raw.py  res.txt  split.py  test_interval.txt
gif/: convert.py
scripts/: All_sessions1.txt  LeGO_error.txt  all_LeGO.sh  all_LeGO_24.sh  all_pcl.sh  all_pcl_label.py  auto_LeGO.sh  compute_interpolated_poses.py  compute_local_poses.py  compute_sequence_graph.py  convert.py  create_sessions.py  distribution.pkl  distribution.py  distribution1.pkl  distribution_new.pkl  distribution_test.pkl  divide_sectors.py  error_log_divide.txt  error_log_divide_old.txt  error_pcl.txt  extract_and_gpt4.py  generate_images_cam.py  hist.py  inter.py  length.pkl  length_new.pkl  length_test.pkl  log  parallel_divide.sh  ray_colmap.py  rayrun.py  run_LeGO.sh  run_LeGO_blocks.sh  run_LeGO_parameter.sh  run_colmap.py  run_devide.sh  run_divide.sh  seq_divide.sh  t.txt  (+1 more)
scripts/database/: rocksdb.py
scripts/elevation_map/: build_elevation_occupancy.py  interpolation.py  plot_elevation_map.sh  plot_map.py  read_map.py  run_build_elevation_occupancy_map.sh
scripts/merge/: c.py  merge_icp.py  sur1.ply
scripts/new_lego/: All_sessions.txt  LeGO_error.txt  all_LeGO_24.sh  auto_LeGO.sh  run_LeGO.sh  run_LeGO_parameter.sh  test.sh
scripts/sector2seq/: sector2sequence.py  sector2sequence.sh
scripts/sequence2sector/: run_seq2sector_imgs.py  run_seq2sector_pcl.py  seq2sector.py  seq2sector.sh  seq2sector_imgs.sh  (+1 more)
src/: CMakeLists.txt  pano.cpp
(+61 files in other folders)
